# exblas

./: .gitignore  CMakeLists.txt  README
include/: blas1.hpp
results/: RNGExample_cpu.txt  RNGExample_gpu.txt  kmeans_cpu.txt  kmeans_gpu.txt  mri-gridding_cpu.txt  spmv_cpu.txt  spmv_gpu.txt
src/: CMakeLists.txt
src/common/: vectorclass.h
src/cpu/: CMakeLists.txt
src/cpu/blas/: CMakeLists.txt
src/cpu/blas/blas1/: CMakeLists.txt  ExSUM.FPE.hpp  ExSUM.cpp  mylibm.hpp
src/cpu/blas1/: CMakeLists.txt  ExSUM.FPE.hpp  ExSUM.cpp  ExSUM.hpp
src/cpu/examples/: CMakeLists.txt
src/cpu/examples/RNGExample/: CMakeLists.txt
src/cpu/examples/RNGExample/StrongReproducibility/: CMakeLists.txt  RNGExample.cpp
src/cpu/examples/kmeans (Rodinia)/: CMakeLists.txt
src/cpu/examples/kmeans (Rodinia)/StrongReproducibility/: CMakeLists.txt  cluster.cpp  kmeans.cpp  kmeans.h  kmeans_clustering.cpp
src/cpu/examples/mri-gridding (Parboil)/: CMakeLists.txt
src/cpu/examples/mri-gridding (Parboil)/StrongReproducibility/: CMakeLists.txt  CPU_kernels.cpp  main.cpp
src/cpu/examples/spmv (Parboil)/: CMakeLists.txt
src/cpu/examples/spmv (Parboil)/StrongReproducibility/: CMakeLists.txt  main.cpp  parboil.cpp  parboil.h
src/gpu/: CMakeLists.txt
src/gpu/blas/: CMakeLists.txt
src/gpu/blas/blas1/: ExDOT.Launcher.cpp  ExSUM.Launcher.cpp
src/gpu/blas/blas2/: ExGEMV.Launcher.cpp  ExTRSV.Launcher.cpp
src/gpu/blas/blas3/: ExGEMM.Launcher.cpp
src/gpu/blas1/: ExSUM.cpp
src/gpu/examples/: CMakeLists.txt
src/gpu/examples/RNGExample/: CMakeLists.txt
src/gpu/examples/RNGExample/StrongReproducibility/: RNGExample.cpp
src/gpu/examples/kmeans (Rodinia)/: CMakeLists.txt
src/gpu/examples/kmeans (Rodinia)/StrongReproducibility/: CMakeLists.txt  cluster.cpp  kmeans.cpp  kmeans.h  kmeans_clustering.cpp  read_input.cpp
src/gpu/examples/kmeans (Rodinia)/WeakReproducibility/: kmeans.cpp
src/gpu/examples/mri-gridding (Parboil)/: CMakeLists.txt
src/gpu/examples/mri-gridding (Parboil)/CPUStrongReproducibility/: CPU_kernels.cpp  UDTypes.h  main.cpp
src/gpu/examples/mri-gridding (Parboil)/StrongReproducibility/: CMakeLists.txt  CPU_kernels.cpp
src/gpu/examples/spmv (Parboil)/: CMakeLists.txt
src/gpu/examples/spmv (Parboil)/StrongReproducibility/: CMakeLists.txt  main.cpp
src/mic/: CMakeLists.txt
src/mic/blas1/: ExSUM.hpp
